# diploma

./: .gitignore
app/app/: .pre-commit-config.yaml
fastApiProject/: pyproject.toml
fastApiProject/app/: main.py
ui/: package-lock.json  package.json
ui/pages/main/: index.tsx
ui/src/components/Controls/: SelectLine.tsx
ui/src/components/Editor/: Editor.tsx
ui/src/pages/: _app.tsx  index.tsx
ui/src/pages/pnginfo/: index.tsx
ui/src/utils/: index.ts
ui/styles/: globals.css
