[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["danis <zinnatullin2012@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120
